ubuntu-mate-artwork (16.04.1) UNRELEASED; urgency=medium

  * Added new community contributed wallpapers.
  * Added MATE colourised icons for categories. (LP: #1530446)

 -- Martin Wimpress <code@flexion.org>  Sat, 02 Jan 2016 11:37:53 +0000

ubuntu-mate-artwork (16.04.0) xenial; urgency=medium

  [ Will Cooke ]
  * Adds padding to sidebar icons (LP: #1515557)
  * Revised theme support for new version of Gedit.

  [ Lars Uebernickel ]
  * osd: style free-floating osd buttons (LP: #1466890, #1500844)

  [ Martin Wimpress ]
  * Added new community contributed wallpapers.
  * Added MATE colourised icons for devices and places. (LP: #1509712)
  * Closes (LP: #1525896)  

 -- Martin Wimpress <code@flexion.org>  Mon, 14 Dec 2015 10:33:02 +0000

ubuntu-mate-artwork (15.12.1) xenial; urgency=medium

  * Transition with new plymouth from /usr/share to /lib:
    - replace /lib instances by /usr/share
    - move lib/plymouth to usr/share/plymouth
    - breaks against older plymouth.
    - ensure we can transition the alternatives to the new version
  * Fixing a removal in ubuntu mate on a file that isn't part of this
    package.

 -- Didier Roche <didrocks@ubuntu.com>  Wed, 09 Dec 2015 08:33:41 +0100

ubuntu-mate-artwork (15.10.4) wily; urgency=medium

  [ Martin Wimpress ]
  * Sync with ubuntu-themes 14.04+15.10.20150910-0ubuntu1
  * Add missing symlinks for icons required by Blueman 2.0.
  * Closes (LP: #)  

  [ Iain Lane ]
  * Style software-center's action bar again

 -- Martin Wimpress <code@flexion.org>  Tue, 22 Sep 2015 09:31:41 +0100

ubuntu-mate-artwork (15.10.3) wily; urgency=medium

  * New release. Closes (LP: #1493065)
    + Add Keep Calm themed backdrops contributed by Tim Apple.
    + Update GTK3 scrollbars to be always visible so they fit with
    the MATE desktop.

 -- Martin Wimpress <martin@nuc>  Mon, 07 Sep 2015 13:54:54 +0100

ubuntu-mate-artwork (15.10.2) wily; urgency=medium

  * New release. Closes (LP: #1490930)